<resources>
    <string name="app_name">My Application</string>
    <string name="logo">Logo</string>
    <string name="desired_league">Desired League :</string>
    <string name="background_image">Background image</string>
    <string name="mens">MENS</string>
    <string name="womens">WOMENS</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">Next</string>
    <string name="get_started">GET STARTED</string>
    <string name="find_team">Find a team in your city, and dominate the league.</string>
    <string name="on_going">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="finish">FINISH</string>
    <string name="baller">BALLER</string>
    <string name="beginner">BEGINNER</string>
    <string name="i_am_a">I am a :</string>
    <string name="searching_league">Looking for co-ed beginner league near you . . .</string>
</resources>